--- a/src/components/header/style.scss
+++ b/src/components/header/style.scss
@@ -33,13 +33,13 @@
         align-items: center;
         img {
             height: 50px;
-            border-radius: 50%; // Makes the logo round
-            border: 2px solid var(--white); // Optional: Adds a white border around the logo
-            padding: 5px; // Optional: Adds padding inside the border
+            border-radius: 50%;
+            border: 2px solid var(--white); 
+            padding: 5px; 
             transition: transform 0.3s ease;
 
             &:hover {
-                transform: scale(1.1); // Slightly enlarges the logo on hover for a nice effect
+                transform: scale(1.1); 
             }
         }
     }
